[package]
name = "bulletml_viewer"
version = "0.1.0"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "BulletML viewer in Rust"
documentation = "https://docs.rs/bulletml_viewer"
repository = "https://github.com/arnodb/bulletml_viewer_rs"

[dependencies]
bulletml = "0.2"
piston_window = "0.107"
rand = "0.7"
