[package]
authors = [
  "Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>",
  "Pocket7878 <poketo7878@gmail.com>",
]
description = "BulletML viewer in Rust"
documentation = "https://docs.rs/bulletml_viewer"
edition = "2021"
license-file = "LICENSE"
name = "bulletml_viewer"
repository = "https://github.com/pocket7878/bulletml_viewer_rs"
version = "0.1.1"

[dependencies]
anyhow = "1.0"
bevy = "0.6.0"
bevy_bulletml = "0.2.1"
once_cell = "1.9"
rand = "0.7"
